Fixed the grid areas of the mobile screens to be only 1 column to avoid overflow

--- a/scss/layout/_forms.scss
+++ b/scss/layout/_forms.scss
@@ -27,8 +27,19 @@
       ". submit .";
     gap: 2em;
 
-    // Mobile screens & above
+    // Mobile screens
     @include u.breakpoint-down("x-small") {
+      grid-template-areas: 
+      "location"
+      "check-in" 
+      "check-out"
+      "adults"
+      "submit";
+      grid-template-columns: repeat(1, 1fr);
+    }
+
+    // Above mobile screens
+    @include u.breakpoint-down("small") {
       grid-template-areas: 
       "location location"
       "check-in check-out"
